--- a/src/static/index.css
+++ b/src/static/index.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 94.5% !important;
+}
+
 .page_loading {
     height: 100vh;
     width: 100vw;
@@ -41,14 +45,7 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-image: -webkit-gradient(
-        linear,
-        left bottom,
-        left top,
-        color-stop(0.44, rgb(122, 153, 217)),
-        color-stop(0.72, rgb(73, 125, 189)),
-        color-stop(0.86, rgb(28, 58, 148))
-    );
+    background-color: darkgray;
 }
 
 @keyframes spin {
